# wisp-gpt

./: .gitignore  .pre-commit-config.yaml  Home.py  README.md  model.json  notebook.ipynb  notebook_preferred.ipynb  pyproject.toml  utils.py
.github/: renovate.json
files/: sample.docx  sample.txt
markdowns/: document_gpt.md  home.md  investor_gpt.md  meeting_gpt.md  private_gpt.md  quiz_gpt.md  site_gpt.md
pages/: 01_DocumentGPT.py  02_PrivateGPT.py  03_QuizGPT.py  04_SiteGPT.py  05_MeetingGPT.py  06_InvestorGPT.py
prompt_templates/document_gpt/: system_message.txt  system_message.yaml
prompt_templates/meeting_gpt/: first_summary.txt  refine.txt
prompt_templates/private_gpt/: system_message.txt
prompt_templates/quiz_gpt/: quiz_schema.json  system_message.txt  system_message_formatting.txt
prompt_templates/site_gpt/: system_message.txt  system_message_answers.txt
src/: chat_model.py  chat_session.py  chat_session_manager.py  embedder.py  manage.py  utils.py  utlis.py
